<resources>
    <string name="app_name">NUMAD22Fa_WanchunWu</string>
    <string name="link_name" />
    <string name="link_url" />
    <string name="link_add_error" />
    <string name="link_add_confirm" />
    <string name="add_link" />
    <string name="cancel" />
    <string name="back">Back</string>
    <string name="aboutme">ABOUTME</string>
    <string name="link_collector">Link Collector</string>
    <string name="clicky_clicky">CLICKY CLICKY</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="f">F</string>
    <string name="e">E</string>
    <string name="pressed">pressed: -</string>
    <string name="about" />
    <string name="clickyclicky">ClickyClicky</string>
    <string name="About">about</string>
    <string name="pressed_button_text" />
    <string name="previous" />
    <string name="Previous">previous</string>
    <string name="Pressed" />
    <string name="GetLocation">GetLocation</string>
    <string name="Coordinates">Coordinates</string>
    <string name="Location_access_denied">Deny</string>
    <string name="Location">location</string>
    <string name="findprimes">Find Primes</string>
    <string name="location_string">Location</string>
    <string name="high_accuracy_string">Get Location</string>
    <string name="balanced_power_accuracy_string">Balanced Accuracy</string>
    <string name="low_power_string">Lowest Accuracy</string>
    <string name="no_power_string">Passive Request</string>
    <string name="accuracy_selected_string">"Accuracy Selected: "</string>
    <string name="default_accuracy_selected_string">Please select one accuracy</string>
    <string name="location_description_string">Current Location in (Latitude, Longitude)</string>
    <string name="location_accuracy_string">Accuracy</string>
    <string name="latitude_string">Latitude</string>
    <string name="longitude_string">Longitude</string>
    <string name="total_travel_distance_description_string">Total Travel Distance in meters</string>
    <string name="distance_string">Distance</string>
    <string name="reset_distance_string">Reset Distance</string>
    <string name="find_primes_string">FIND PRIMES</string>
    <string name="terminate_string">Terminate Search</string>
    <string name="latest_found_prime_string">"Latest found prime number: "</string>
    <string name="current_check_num_string">"Current check number: "</string>
    <string name="pacifier_switch_string">Pacifier Switch</string>
</resources>